# claude-visual

./: .gitignore  CLAUDE.md  README.md  TODO.md  dev.ts  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/commands/: add-component.md  add-hook.md  build.md  check.md  install-hooks.md  release.md
.github/workflows/: deploy-landing.yml  release.yml
assets/: index-Bw4wD8Pm.css  index-BzhuIMMn.js  index-Cf2aT_dO.js
hooks/: claude-hooks.json  install.sh
landing/: index.html  package.json  vite.config.ts
landing/src/: App.tsx  index.css
public/: site.webmanifest
releases/: v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.5.0.md
server/: events.ts  history.test.ts  history.ts  index.ts  transcript.test.ts  transcript.ts
server/db/: schema.ts  types.ts
shared/: tokens.test.ts  tokens.ts  types.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgentTimeline.tsx  AlertSettingsModal.tsx  EventFeed.tsx  Header.tsx  HistoricalStatsPanel.tsx  HistoryBrowser.tsx  HookInstallBanner.tsx  ReplayControls.tsx  ReplayViewer.tsx  SearchResultsPanel.tsx  SessionList.tsx  SessionSelector.tsx  SessionViewer.tsx  SettingsPage.tsx  StatsPanel.tsx  ToastContainer.tsx  TokenPanel.tsx  ToolStats.tsx  TooltipOverlay.tsx  TranscriptPanel.tsx  UpdateBanner.tsx
src/hooks/: useNotifications.ts  useReplaySession.ts  useRouter.ts  (+3 more)
(+11 files in other folders)
